test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_parse/plx1_sizeof_pointer_deref.plx
pub fn main(none) i32 {
    x: i32 = 10
    return sizeof(@x)[]
}
